--- a/starter_code/Jenkinsfile
+++ b/starter_code/Jenkinsfile
@@ -8,13 +8,13 @@ pipeline {
   stages {
     stage('Test') {
       steps {
-          sh 'mvn test'
+          bat 'mvn test'
       }
     }
 
     stage('Build') {
       steps {
-        sh 'mvn -B -DskipTests clean package'
+        bat 'mvn -B -DskipTests clean package'
       }
     }
   }
